--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,11 @@
     text-decoration: none;
     /* font-weight: bolder; */
 }
+.active {  
+    text-decoration: underline;
+    border-bottom: 3px solid white;
+}
+ 
 
 .home-heading {
     margin-top: 40px;
@@ -102,4 +107,110 @@
     padding: 30px;
     margin: 21px;
 }
- 
+
+#footer {
+    font-family: 'Istok Web', sans-serif;
+    background-color: black;
+    color: white;
+    text-align: center;
+}
+h1 {
+    text-align: center;
+}
+
+.container {
+    min-height: 90vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.myForm {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 34px;
+    text-align: center;
+    width: 70vw;
+    height: 70vh;
+    justify-content: center;
+    background-color: #290808;
+}
+
+.myInput {
+    outline: none;
+    display: block;
+    padding: 13px 16px;
+    width: 50%;
+    border: 2px solid black;
+    border-radius: 10px;
+    margin: 14px 0px;
+}
+
+.btn {
+    border: 2px solid #271a1a;
+    margin: 8px 2px;
+    width: 5%;
+    background-color: #292020;
+    cursor: pointer;
+    border-radius: 8px;
+    outline: none;
+    text-align: center;
+    color: white;
+    padding: 6px 4px;
+}
+.foot {
+    background-color: black;
+    color: white;
+    margin: 0px;
+    display: flex;
+    flex-direction: column;
+    /* height: 25vh; */
+    padding: 30px;
+    align-items: center;
+    /* justify-content: center; */
+    border: 3px solid lightgreen;
+}
+
+.spn {
+    text-align: center;
+    align-items: center;
+    font-size: 20px;
+    justify-content: center;
+    font-weight: bolder;
+}
+
+.spn:hover {
+    transition: 3s;
+    color: lightgreen;
+}
+
+.footImg {
+    width: 49px;
+    margin: 43px 7px;
+    border-radius: 14px;
+    cursor: pointer;
+
+
+
+}
+
+.footg {
+    width: 8pc;
+    float: left;
+    /* margin-left: ; */
+    flex-direction: column;
+    display: flex;
+    border-radius: 14px;
+}
+
+.footImg2 {
+    width: 8pc;
+    margin: 6px 32pc;
+    /* float: left; */
+    /* flex-direction: column; */
+    /* padding: 10px; */
+    /* display: flex; */
+    border-radius: 14px;
+    cursor: pointer;
+}
